--- a/register.html
+++ b/register.html
@@ -207,7 +207,7 @@ ul.ui-autocomplete li.ui-menu-item {
 								<div style="width:100%" class="form-group" style="width:100%">				
 									<div class="col-md-12" style="text-align:left;font-weight:300">					
 										<label class="block">What's  your Ethnicity</label>						
-										<select class="form-group" id="race">
+										<select style="width:300px" class="form-group" id="race">
 											<option value="">Rather Not Disclose</option>
 											<option value="white">White</option>
 											<option value="black">Black</option>
@@ -246,7 +246,7 @@ ul.ui-autocomplete li.ui-menu-item {
 								<div style="width:100%" class="form-group">				
 									<div class="col-md-12" style="text-align:left;font-weight:300">					
 										<label class="block">What's  your Annual Income</label>						
-										<select id="income">
+										<select style="width:300px" id="income">
 											<option value="">Rather Not Disclose</option>
 											<option value="1">0 to 100K</option>
 											<option value="2">100K to 250K</option>
@@ -262,7 +262,7 @@ ul.ui-autocomplete li.ui-menu-item {
 								<div style="width:100%" class="form-group">				
 									<div class="col-md-12" style="text-align:left;font-weight:300">					
 										<label class="block">Allowance you would be willing to give</label>						
-										<select id="allowance_sd">
+										<select style="width:300px" id="allowance_sd">
 											<option value="">Rather Not Disclose</option>
 											<option value="1">Upto $1000 a Month</option>
 											<option value="2">$1000 to $2,500</option>
@@ -278,7 +278,7 @@ ul.ui-autocomplete li.ui-menu-item {
 								<div style="width:100%" class="form-group">				
 									<div class="col-md-12" style="text-align:left;font-weight:300">					
 										<label class="block">Allowance you are seeking</label>						
-										<select id="allowance_sb">
+										<select style="width:300px" id="allowance_sb">
 											<option value="">Rather Not Disclose</option>
 											<option value="1">Upto $1000 a Month</option>
 											<option value="2">$1000 to $2,500</option>
@@ -293,7 +293,7 @@ ul.ui-autocomplete li.ui-menu-item {
 							<div class="row">			
 								<div style="width:100%" class="form-group">				
 									<div class="col-md-12" style="text-align:left;font-weight:300">					
-										<label class="block">TAG yourself for keyword Searches</label>						
+										<label class="block">Create Tags for your profile</label>						
 										<iframe src="https://lushmatch.com/tags/index.html?gender=Sugar Baby"  id="tf" style="width:100%;height:150px;margin:auto;border:none;font-family:Open Sans"></iframe>
 									</div>
 								</div>
