--- a/profileBrowse.html
+++ b/profileBrowse.html
@@ -739,7 +739,7 @@ function getRandomColor(){
 							str+=	'		<div class="col-md-4 col-sm-4 col-xs-12" style="margin:auto;max-height:'+wh+'px!Important;width:100%;max-width:500px;left:0;right:0;padding:0px;">'
 							str+=	'			<div class="team-card-style-1" style="box-shadow:none!Important;height:'+wh+'px!Important;max-height:'+wh+'px!Important;min-height:'+wh+'px!Important;left:0;right:0;">'
 							str+=	'				<div class="team-card-style-1" style="box-shadow:none!Important;background:#fff;height:150px"></div>'
-							str+=	'				<a href="member_preview_all_photos.html?mid=' + data[i].id + '"><img id="imgProfile'+data[i].id+'" src="https://lushmatch.com/sb/'+data[i].filename_1+'" style="width:100%;border:0px solid white;margin:auto;margin-top:-120px"></a>'
+							str+=	'				<a href="member_preview_all_photos.html?mid=' + data[i].id + '"><img id="imgProfile'+data[i].id+'" src="https://lushmatch.com/sb/'+data[i].filename_1+'" style="max-height:50%;min-width:100%;border:0px solid white;margin:auto;margin-top:-120px"></a>'
 							str+=	'				<div class="team-card-style-1" id="profileText'+i+'" class="team-info">'
 							str+=	'				<div style="position:fixed;top:100px;width:80%;text-align:center;margin:auto;padding:0;border:none;overflow:hidden;word-wrap:break-word">'+strT+'</div>'
 							str+=	'					<div>'
