--- a/sendMail.html
+++ b/sendMail.html
@@ -37,7 +37,7 @@
 		fetchInject([
 		  'https://lushmatch.com/assets/js/jquery.js'
 		]).then(() => {
-			cinit()
+			//cinit()
 		})
 		
 		function upload_photos() {
@@ -139,7 +139,7 @@
 							qimg='no_photo_m.png'
 						}					
 					}
-					document.getElementById('mail_login').textContent=data[0].login.toUpperCase()
+				//	document.getElementById('mail_login').textContent=data[0].login.toUpperCase()
 					document.getElementById('mail_age').textContent=data[0].age
 					document.getElementById('mail_img').innerHTML="<img src='https://lushmatch.com/sb/"+qimg+"' style='margin:0px;width:125px;height:125px'>"
 					document.getElementById('mail_location').textContent=data[0].location
@@ -150,7 +150,7 @@
 	}
 	</script>
 	<script src="https://onesugardaddy.com/jsSocketNode.js"></script> <script src="track.js"></script>
-	<script src="https://onesugardaddy.com/mobile/custom_menu_updated.js"></script>
+	<script src="https://onesugardaddy.com/custom_menu_no_header.js"></script>
 	
 	  <!--========================================================
                             HEADER
