--- a/settings.html
+++ b/settings.html
@@ -416,13 +416,30 @@ margin-left:15px;font-family:Orbitron!Important;;font-size:16px!Important
             <div class="wizard" style="border-bottom:5px solid white;max-width:800px;margin:auto">
                 <nav class="list-group list-group-flush">
 
+					<a id="media" style="background:aliceblue" class="list-group-item" href="turbo.html">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
+                                <div id="media_caption" > TURBO BROWSER!</div>
+                            </div><span class="badge badge-secondary">7</span>
+                        </div>
+                    </a> 					
+
+					<a id="media" style="background:aliceblue" class="list-group-item" href="multi_view.html">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
+                                <div id="media_caption" > ALL USER FEEDS</div>
+                            </div><span class="badge badge-secondary">7</span>
+                        </div>
+                    </a> 					
+
 					<a id="media" style="background:aliceblue" class="list-group-item" href="chat.html">
                         <div class="d-flex justify-content-between align-items-center">
                             <div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
                                 <div id="media_caption" > LIVE CHATROOM!</div>
                             </div><span class="badge badge-secondary">7</span>
                         </div>
-                    </a> 					<a id="media" style="background:aliceblue" class="list-group-item" href="javascript:toggle_children('media')">
+                    </a> 					
+					<a id="media" style="background:aliceblue" class="list-group-item" href="javascript:toggle_children('media')">
                         <div class="d-flex justify-content-between align-items-center">
                             <div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
                                 <div id="media_caption" > + My Media</div>
